tests/baselines/reference/indirectSelfReference.errors.txt
tests/cases/compiler/indirectSelfReference.ts(1,7): error TS2310: Type 'a' recursively references itself as a base type.


==== tests/cases/compiler/indirectSelfReference.ts (1 errors) ====
    class a extends b{ }
          ~
!!! error TS2310: Type 'a' recursively references itself as a base type.
    class b extends a{ }